--- a/src/main/resources/static/house_add.html
+++ b/src/main/resources/static/house_add.html
@@ -2,25 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>房屋增加</title>
     <link rel="stylesheet" href="css/elementui.css"/>
-    <script src="js/vue.js"></script>
-    <script src="js/elementui.js"></script>
-    <script src="js/axios.min.js"></script>
+    <script src="/js/axios.min.js"></script>
+    <script src="/js/vue.js"></script>
+    <script src="/js/elementui.js"></script>
 </head>
 <body>
 <div id="app">
-    <el-form ref="form" :model="form" label-width="80px">
-        <el-form-item label="楼宇">
-            <el-input v-model="form.name"></el-input>
+    <el-form :model="house"ref="form" status-icon label-width="80px">
+        <el-form-item label="房号" prop="no">
+            <el-input v-model="house.no"></el-input>
         </el-form-item>
-
-        <el-form-item label="单元">
-            <el-input type="textarea" v-model="form.units"></el-input>
+        <el-form-item label="楼宇" prop="buildingId">
+            <el-select v-model="house.buildingId">
+                <el-option
+                        v-for="building in buildings"
+                        :key="building.id"
+                        :label="building.name+building.units"
+                        :value="building.id">
+                </el-option>
+            </el-select>
+        </el-form-item>
+        <el-form-item label="面积" prop="area">
+            <el-input v-model="house.area"></el-input>
+        </el-form-item>
+        <el-form-item label="备注" prop="remark">
+            <el-input v-model="house.remark"></el-input>
+        </el-form-item>
+        <el-form-item label="业主" prop="ownerId">
+            <el-select v-model="house.ownerId" placeholder="请选择业主">
+                <el-option
+                        v-for="owner in owners"
+                        :key="owner.id"
+                        :label="owner.name"
+                        :value="owner.id">
+                </el-option>
+            </el-select>
+        </el-form-item>
+        <el-form-item label="交房日" prop="deliveryDay">
+            <el-input v-model="house.deliveryDay"></el-input>
+        </el-form-item>
+        <el-form-item label="图片">
+            <el-upload
+                    class="avatar-uploader"
+                    action="/house/upload"
+                    :show-file-list="false"
+                    :on-success="handleAvatarSuccess">
+                <img v-if="house.image" :src="house.image" class="avatar">
+                <i v-else class="el-icon-plus avatar-uploader-icon"></i>
+            </el-upload>
         </el-form-item>
         <el-form-item>
             <el-button type="primary" @click="onSubmit">立即创建</el-button>
-            <el-button>取消</el-button>
         </el-form-item>
     </el-form>
 </div>
@@ -28,23 +62,75 @@
     new Vue({
         el: "#app",
         data: {
-            form:{
-                name: '',
-                units: ''
-            }
+            house: {
+                no: '',
+                buildingId: '',
+                area: '',
+                remark: '',
+                ownerId: '',
+                deliveryDay: '',
+                image: ''
+            },
+            buildings: [],
+            owners: [],
+
         },
         methods: {
+            handleAvatarSuccess(res, file) {
+                this.house.image = res.data;
+            },
             onSubmit() {
-                axios.post("/building/add", this.form).then(function (response){
-                    if (response.data.code==200){
-                        location.href="/building_list.html"
-                    }else {
-                        alert("系统错误")
+                axios.post('/house/add', this.house).then(response => {
+                    if (response.data.code === 200) {
+                        alert("添加成功");
+                        location.href="/house_list.html";
+                    } else if (response.data.code === -1) {
+                        alert("系统异常，请稍候再试")
                     }
                 })
-            }
+            },
+        },
+        mounted() {
+            axios.get('/building/list').then(response => {
+                if (response.data.code == 200) {
+                    this.buildings = response.data.data
+                }
+            })
+            axios.get('/house/listOwners').then(response => {
+                if (response.data.code === 200) {
+                    this.owners = response.data.data
+                }
+            })
         }
     })
 </script>
 </body>
+<style>
+    .avatar-uploader .el-upload {
+        border: 1px dashed #d9d9d9;
+        border-radius: 6px;
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .avatar-uploader .el-upload:hover {
+        border-color: #409EFF;
+    }
+
+    .avatar-uploader-icon {
+        font-size: 28px;
+        color: #8c939d;
+        width: 178px;
+        height: 178px;
+        line-height: 178px;
+        text-align: center;
+    }
+
+    .avatar {
+        width: 178px;
+        height: 178px;
+        display: block;
+    }
+</style>
 </html>
