--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/pintuer1.2.css">
     <link rel="stylesheet" href="css/admin.css">
+    <script src="/js/vue.js"></script>
+    <script src="/js/axios.min.js"></script>
 </head>
 <body>
 <div class="bg"></div>
@@ -22,33 +24,61 @@
                     <div class="form-group">
                         <div class="field field-icon-right">
                             <input type="text" class="input input-big" name="name"
-                                   placeholder="登录账号"/> <span
+                                   placeholder="登录账号" v-model="account"/> <span
                                 class="icon icon-user margin-small"></span>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="field field-icon-right">
                             <input type="password" class="input input-big" name="password"
-                                   placeholder="登录密码"/> <span
+                                   placeholder="登录密码" v-model="password"/> <span
                                 class="icon icon-key margin-small"></span>
                         </div>
                     </div>
                     <div class="field">
-                        <input type="text" class="input input-big" v-model="code"
+                        <input type="text" class="input input-big"
                                placeholder="填写右侧的验证码"/>
-                        <img :src=""
+                        <img
                              alt="" width="100" height="32" class="passcode"
                              style="height:43px;cursor:pointer;">
                     </div>
                     <div style="padding:30px;">
                         <input type="button"
                                class="button button-block bg-main text-big input-big"
-                               value="登录" >
+                               value="登录" @click="login">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script>
+
+    new Vue({
+        el:"#app",
+        data:{
+            account:"tom",
+            password:"123456"
+        },
+        methods:{
+            login:function (){
+                axios.post("/user/login",{
+                    account: this.account,
+                    password: this.password
+                }).then(function (response){
+                    if (response.data.code==200){
+                        location.href="/index.html"
+                    }else if (response.data.code==300){
+                        alert("账号或密码错误")
+                    }else {
+                        alert("系统错误")
+                    }
+                })
+            }
+        }
+
+    })
+</script>
 </body>
+
 </html>
