--- a/src/main/resources/static/user_list.html
+++ b/src/main/resources/static/user_list.html
@@ -15,34 +15,33 @@
 <div id="app">
     <template>
         <el-table
-                :data="buildings"
-                stripe="true"
-                border="true"
+                :data="users"
+
 
                 style="width: 100%">
             <el-table-column
-                    fixed="left"
+
                     label="序号"
                     type="index"
                     width="50">
             </el-table-column>
 
             <el-table-column
-                    prop="name"
-                    label="楼宇"
+                    prop="account"
+                    label="账号"
                     width="180">
             </el-table-column>
             <el-table-column
-                    prop="units"
-                    label="单元"
+                    prop="password"
+                    label="密码"
                     width="180">
             </el-table-column>
             <el-table-column
                     label="状态"
                     width="180">
                 <template slot-scope="scope">
-                    <span style="margin-left: 10px" v-if="scope.row.status=='n'">否</span>
-                    <span style="margin-left: 10px" v-if="scope.row.status=='y'">是</span>
+                    <span style="margin-left: 10px" v-if="scope.row.status=='1'">正常</span>
+                    <span style="margin-left: 10px" v-if="scope.row.status=='0'">冻结</span>
                 </template>
             </el-table-column>
             <el-table-column label="操作">
@@ -67,13 +66,13 @@
     new Vue({
         el: "#app",
         data: {
-            buildings: []
+            users: []
         },
         mounted: function () {
 
-            axios.get("/building/list").then(r => {
+            axios.get("/user/list").then(r => {
 
-                this.buildings = r.data.data;
+                this.users = r.data.data;
             })
         }
 
