--- a/src/main/resources/static/house_list.html
+++ b/src/main/resources/static/house_list.html
@@ -45,7 +45,7 @@
 
             style="width: 100%">
         <el-table-column
-                fixed="no"
+                prop="no"
                 label="房号"
                 width="50">
         </el-table-column>
@@ -86,13 +86,14 @@
         <el-table-column label="操作">
             <template slot-scope="scope">
                 <el-button
+                        type="text"
                         size="mini"
-                        @click="handleEdit(scope.$index, scope.row)=true">编辑
+                        @click="handleEdit(scope.$index, scope.row)">修改
                 </el-button>
                 <el-button
                         size="mini"
                         type="danger"
-                        @click="handleDelete(scope.$index, scope.row)=true">删除
+                        @click="handleDelete(scope.$index, scope.row)">删除
                 </el-button>
             </template>
         </el-table-column>
@@ -109,12 +110,12 @@
 
 
 
-    <el-dialog title="修改房屋信息" :visible.sync="dialogFormVisible">
-        <el-form :model="house">ref="form" status-icon label-width="80px">
-            <el-form-item label="房号" prop="no":label-width="formLabelWidth">
-                <el-input v-model="house.no"></el-input>
+    <el-dialog title="修改房屋" :visible.sync="dialogFormVisible">
+        <el-form :model="house">
+            <el-form-item label="房号">
+                <el-input v-model="house.no" autocomplete="off"></el-input>
             </el-form-item>
-            <el-form-item label="楼宇" prop="buildingId":label-width="formLabelWidth">
+            <el-form-item label="楼宇" prop="buildingId">
                 <el-select v-model="house.buildingId">
                     <el-option
                             v-for="building in buildings"
@@ -124,13 +125,13 @@
                     </el-option>
                 </el-select>
             </el-form-item>
-            <el-form-item label="面积" prop="area":label-width="formLabelWidth">
+            <el-form-item label="面积" prop="area">
                 <el-input v-model="house.area"></el-input>
             </el-form-item>
-            <el-form-item label="备注" prop="remark":label-width="formLabelWidth">
+            <el-form-item label="备注" prop="remark">
                 <el-input v-model="house.remark"></el-input>
             </el-form-item>
-            <el-form-item label="业主" prop="ownerId":label-width="formLabelWidth">
+            <el-form-item label="业主" prop="ownerId">
                 <el-select v-model="house.ownerId" placeholder="请选择业主">
                     <el-option
                             v-for="owner in owners"
@@ -140,10 +141,10 @@
                     </el-option>
                 </el-select>
             </el-form-item>
-            <el-form-item label="交房日" prop="deliveryDay":label-width="formLabelWidth">
+            <el-form-item label="交房日" prop="deliveryDay">
                 <el-input v-model="house.deliveryDay"></el-input>
             </el-form-item>
-            <el-form-item label="图片":label-width="formLabelWidth">
+            <el-form-item label="图片">
                 <el-upload
                         class="avatar-uploader"
                         action="/house/upload"
@@ -157,9 +158,11 @@
         </el-form>
         <div slot="footer" class="dialog-footer">
             <el-button @click="dialogFormVisible = false">取 消</el-button>
-            <el-button type="primary" @click="dialogFormVisible = false">确 定</el-button>
+            <el-button type="primary" @click="updateHouse">确 定</el-button>
         </div>
     </el-dialog>
+
+
 
 </div>
 <script>
@@ -178,8 +181,6 @@
             },
             pageCount:0,
 
-            dialogTableVisible: false,
-            dialogFormVisible: false,
 
             house: {
                 no: '',
@@ -190,6 +191,7 @@
                 deliveryDay: '',
                 image: ''
             },
+            dialogFormVisible: false,
             formLabelWidth: '120px'
         },
 
@@ -214,15 +216,22 @@
                     }
                 })
             },
-            handleEdit(index, row) {
-                console.log(index, row);
+            handleEdit(index,row) {
+                this.house = Object.assign({}, row)
+                this.dialogFormVisible = true
+            },
+            updateHouse() {
                 axios.post('/house/update', this.house).then(response => {
                     if (response.data.code === 200) {
-                        alert("修改成功");
+                        this.$message.success('修改成功')
+                        this.dialogFormVisible = false
                         location.href="/house_list.html";
-                    } else if (response.data.code === -1) {
-                        alert("系统异常，请稍候再试")
+                    } else {
+                        this.$message.error(response.data.msg)
                     }
+                }).catch(error => {
+                    console.log(error)
+                    this.$message.error('修改失败')
                 })
             },
             handleDelete(index, row) {
